src/client/App.less
@import "./colors.less";
body {
    background-color: #121621;
    overflow: auto;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#react-app {
    height: 100vh;
    display: flex;
    flex-direction: column;
    color: @defaultGray;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1em;
    font-weight: 600;
    line-height: 1.2em;
    text-transform: uppercase;
    text-align: center;
    letter-spacing: 4px;
}

#title {
    text-align: center;
    position: absolute;
    margin: 24px 0px;
    width: 100%;
    font-size: 1.6em;
    color: @defaultGray;
    animation-duration: 1s;
    animation-name: title-slidedown;
}

@keyframes title-slidedown {
    from {
        top: -48px
    }
    to {
        top: 0
    }
}

.clientId {
    margin: 4px;
}

#mainBoards {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.boardRow {
    display: flex;
    justify-content: center;
}

#rightBoards {
    justify-content: space-around;
}

.boards {
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    transition: all 0.5s ease;
    align-content: center;
}

.board {
    margin: 8px 24px;
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    justify-content: center;
    align-items: center;
    min-width: 600px;
}

#info {
    font-size: 0.8em;
    color: @defaultGray;
    animation-duration: 1s;
    animation-name: info-slideup;
    padding-top: 8px;
}

@keyframes info-slideup {
    from {
        bottom: -24px
    }
    to {
        bottom: 0
    }
}

@keyframes boardSlideIn {
    from {
        height: 0;
        margin-left: 200%;
        width: 300%;
    }
    to {
        width: 100%;
    }
}

@keyframes boardSlideOut {
    from {
        width: 100%;
    }
    to {
        height: 0;
        margin-right: 200%;
        width: 300%;
    }
}

.unselectable {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.BgColorTransition {
    transition: background-color 0.3s ease-out;
}

.colorTransition {
    transition: color 0.3s ease-out;
}

.transitionAllColor {
    transition: color 0.3s ease-out, background-color 0.3s ease-out, border-color 0.3s ease-out, box-shadow 0.3s ease-out, filter 0.3s ease-out;
}

.isometricBoxShadow {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: -10;
    box-shadow: currentColor -1px 1px, currentColor -2px 2px;
    .saturate & {
        filter: saturate(300%);
    }
}

.container {
    position: relative;
    display: flex;
    background-color: @panelGray;
}

.saturate {
    .colorize {
        filter: saturate(300%);
    }
}

